--- a/app/client/deployments/pod.yaml
+++ b/app/client/deployments/pod.yaml
@@ -20,3 +20,15 @@ spec:
           ports:
             - containerPort: 8080
           imagePullPolicy: Always
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kafka-client-service
+spec:
+  selector:
+    app: kafka-client
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
